--- a/subaa.html
+++ b/subaa.html
@@ -62,9 +62,58 @@
                         <div class="drop-down">
                             <a href="#">pollution NOC</a><i class="fa-solid fa-sort-down"></i>
                         </div>
+                        <div class="drop-down">
+                            <a href="#">E-Waste</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
                     </div></li>
-                    <li><a href="#">tax & financial</a><i class="fa-solid fa-sort-down"></i></li>
-                    <li><a href="#">company</a><i class="fa-solid fa-sort-down"></i></li>
+                    <li><a href="#">tax & financial</a><i class="fa-solid fa-sort-down"></i>
+                    <div class="drop">
+                        <div class="drop-down">
+                            <a href="#">Accounting & book keeping services</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">Advisory services</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">tax filling</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">business document templates</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">service related</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">property related</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">legal disputes</a><i class="fa-solid fa-sort-down"></i>
+                        </div>
+                    </div></li>
+                    <li><a href="#">company</a><i class="fa-solid fa-sort-down"></i>
+                    <div class="drop">
+                        <div class="drop-down">
+                            <a href="#">about us</a>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">learning</a>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">newsletter</a>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">publication</a>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">are you a CA/CS?</a>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">media</a>
+                        </div>
+                        <div class="drop-down">
+                            <a href="#">contact us</a>
+                        </div>
+                    </div></li>
                     <li><div class="wrapper">
                         <div class="button">
                             <div class="icon"><i class="fa-brands fa-whatsapp"></i></div>
