--- a/suganya.html
+++ b/suganya.html
@@ -16,7 +16,9 @@
       <div class="logo">
         <img src="./assets/images/logo.png" />
       </div>
-
+      <div class="menu">
+        <i class="fa-solid fa-bars"></i>
+      </div>
       <div class="navbar">
         <ul>
           <li>
