--- a/suganya.html
+++ b/suganya.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Corpbiz</title>
     <link rel="stylesheet" href="/style/suganya.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="navbar_brand">
       <div class="logo">
         <img src="./assets/images/logo.png" />
       </div>
-      <div class="menu">
+      <div class="open_menu" onclick="openMenu()">
         <i class="fa-solid fa-bars"></i>
       </div>
       <div class="navbar">
+        <div class="close_menu" onclick="closeMenu()">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
         <ul>
           <li>
             <a href="#">Startup <i class="fa-solid fa-caret-down"></i></a>
@@ -158,9 +163,19 @@
           <li>
             <i class="fa-solid fa-phone"><p>7838392800</p></i>
           </li>
-          <li><button>Login</button></li>
+          <li>
+            <div class="btn"><button>Login</button></div>
+          </li>
         </ul>
       </div>
     </div>
+    <form action="#" class="search">
+      <input type="text" class="search_input" placeholder="search" />
+      <button class="search_button">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </button>
+    </form>
+
+    <script src="./style/suganya.js"></script>
   </body>
 </html>
