--- a/subaa.html
+++ b/subaa.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -21,7 +20,13 @@
             <div class="logo">
                 <img src="./assets/images/logo.corp.png" alt="">
             </div>
+            <div class="open-nav-menu" onclick="openMenu()">
+                <span></span>
+            </div>
             <div class="navbar">
+                <div class="close-nav-menu" onclick="closeMenu()">
+                    <i class="fa-solid fa-xmark"></i>
+                </div>
                 <ul>
                     <li><a href="#">startup</a><i class="fa-solid fa-sort-down"></i>
                         <div class="drop">
@@ -127,7 +132,7 @@
                         </div>
                     </div></li>
                     <li><div class="btn">
-                        <button>login</button>
+                        <button>Login</button>
                     </div></li>
                 </ul>
             </div>
@@ -136,6 +141,7 @@
 
     <section>
         <img src="./assets/images/anime.jpg" alt="">
+        <img src="./assets/images/home.jpg" alt="">
         <img src="./assets/images/home.jpg" alt="">
     </section>
 
