search bar with auto text

--- a/subaa.html
+++ b/subaa.html
@@ -140,9 +140,14 @@
     </nav>
 
     <section>
-        <img src="./assets/images/anime.jpg" alt="">
-        <img src="./assets/images/home.jpg" alt="">
-        <img src="./assets/images/home.jpg" alt="">
+        <div class="search-play">
+            <div class="search">
+                <div class="search-1">
+                    <input type="search" id="search-box" placeholder="Search">
+                    <label for="search-box" class="fas fa-search"></label>
+                </div>
+            </div>
+        </div>
     </section>
 
 
