--- a/suganya.html
+++ b/suganya.html
@@ -177,6 +177,39 @@
           <label for="search-box" class="fas fa-search"></label>
         </div>
       </div>
+      <div class="popular">
+        <h5>Popular Service:</h5>
+      </div>
+      <div class="content">
+        <ul>
+          <li><p>Private Limited Company Registration</p></li>
+          <li><p>FSSAI License</p></li>
+          <li><p>GST Registration</p></li>
+          <li><p>MSME Registration</p></li>
+          <li><p>IEC Registration</p></li>
+          <li><p>ISO Registration</p></li>
+          <li><p>Trademark Registration</p></li>
+          <li><p>Trademark Assignment</p></li>
+          <li><p>PSARA License</p></li>
+          <li><p>RERA Registration</p></li>
+          <li><p>RERA Registration For Promoters</p></li>
+          <li><p>Plastic Waste Processors Authorisation</p></li>
+          <li><p>TSDF Facility Services</p></li>
+          <li><p>Authorization for Export of E-waste</p></li>
+          <li><p>Epr Post Compliance - plastic Waste</p></li>
+        </ul>
+      </div>
+      <div class="moblie_app">
+        <div class="google">
+          <img src="/asset/images/google.svg" />
+        </div>
+        <p>4.5 of 5</p>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+      </div>
     </div>
 
     <script src="./style/suganya.js"></script>
