google image alignment

--- a/suganya.html
+++ b/suganya.html
@@ -209,7 +209,14 @@
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-star"></i>
+        <div class="google_play">
+          <img src="/asset/images/google_play.png" />
+        </div>
       </div>
+    </div>
+
+    
+
     </div>
 
     <script src="./style/suganya.js"></script>
