search bar adjustment, corpbiz box create

--- a/suganya.html
+++ b/suganya.html
@@ -214,10 +214,21 @@
         </div>
       </div>
     </div>
+  </div>
 
-    
 
+  <div class="card_container">
+    <div class="corpbiz_box">
+      <h3>Why choose Corpbiz</h3>
+      <p>Corpbiz provide expert services which can get your new business off to a flying start. 
+        We are Compliance and finance officers for your business. Here you get simple and
+        affordable online company registration and range of essential services. A world class
+        technology - driven platform, offering end to end service from Startup to well established
+        firm.
+      </p>
     </div>
+
+  </div>
 
     <script src="./style/suganya.js"></script>
   </body>
