front page over

--- a/subaa.html
+++ b/subaa.html
@@ -182,6 +182,7 @@
                     </div>
                 </div>
                 <div class="play">
+                    <p>Download our mobile app</p>
                     <img src="./assets/images/playstore.png" alt="">
                 </div>
             </div>
