search bar changed

--- a/suganya.html
+++ b/suganya.html
@@ -170,13 +170,21 @@
       </div>
     </div>
 
-    <div class="background_image">
-      <div class="search_box">
+    <div class="search_bar">
+      <!-- <div class="search_box">
         <div class="search">
           <input type="text" id="search-box" placeholder="search" />
           <label for="search-box" class="fas fa-search"></label>
         </div>
-      </div>
+      </div> -->
+      
+        <div class="search">
+          <div class="search_box">
+            <input type="text" id="search-box" placeholder="search">
+            <label type="search-box" class="fas fa-search"></label>
+          </div>
+        </div>
+      
       <div class="popular">
         <h5>Popular Service:</h5>
       </div>
@@ -199,16 +207,19 @@
           <li><p>Epr Post Compliance - plastic Waste</p></li>
         </ul>
       </div>
+
       <div class="moblie_app">
         <div class="google">
           <img src="/asset/images/google.svg" />
+          <p> 4.5 of 5 </p>
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
         </div>
-        <p>4.5 of 5</p>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-star"></i>
         <div class="google_play">
           <img src="/asset/images/google_play.png" />
         </div>
