--- a/suganya.html
+++ b/suganya.html
@@ -171,19 +171,14 @@
     </div>
 
     <div class="search_bar">
-      <!-- <div class="search_box">
-        <div class="search">
-          <input type="text" id="search-box" placeholder="search" />
-          <label for="search-box" class="fas fa-search"></label>
-        </div>
-      </div> -->
       
-        <div class="search">
+      <div class="search">
           <div class="search_box">
             <input type="text" id="search-box" placeholder="search">
             <label type="search-box" class="fas fa-search"></label>
           </div>
         </div>
+
       
       <div class="popular">
         <h5>Popular Service:</h5>
@@ -208,6 +203,7 @@
         </ul>
       </div>
 
+
       <div class="moblie_app">
         <div class="google">
           <img src="/asset/images/google.svg" />
@@ -228,6 +224,7 @@
   </div>
 
 
+
   <div class="card_container">
     <div class="corpbiz_box">
       <h3>Why choose Corpbiz</h3>
@@ -238,9 +235,33 @@
         firm.
       </p>
     </div>
-
+    <div class="animation_card">
+      <div class="card1">
+        <img src="/asset/images/national.svg">
+        <h2>National top 50 consulting firms</h2>
+        <p>Corpbiz, is a professional service firm, which provides a range of Government 
+           registration besides Taxation services and solutions. Roundly considered as the most 
+           prestigious firm of its kind.
+        </p>
+      </div>
+      <div class="card2">
+        <img src="/asset/images/client_satisfaction.svg">
+        <h2>99.9% client satisfaction</h2>
+        <p>As a professional service firm we are continually striving to improve the service we
+           offer to our client. We believe in building strong and long term relationship by 
+           being genuinely approachable.
+        </p>
+      </div>
+      <div class="card3">
+        <img src="/asset/images/client-advisory.svg">
+        <h2>Excellent Advisory Services</h2>
+        <p>We are best in rendering consultancy services in the industry through expert 
+          professionals associated with us.
+        </p>
+      </div>
+    </div>
   </div>
 
-    <script src="./style/suganya.js"></script>
+      <script src="./style/suganya.js"></script>
   </body>
 </html>
