login hover changed

--- a/suganya.html
+++ b/suganya.html
@@ -217,6 +217,9 @@
           </div>
         </div>
         <div class="google_play">
+          <div>
+           <p>Download our moblie app</p>
+          </div>
           <img src="/asset/images/google_play.png" />
         </div>
       </div>
@@ -236,28 +239,34 @@
       </p>
     </div>
     <div class="animation_card">
-      <div class="card1">
-        <img src="/asset/images/national.svg">
-        <h2>National top 50 consulting firms</h2>
-        <p>Corpbiz, is a professional service firm, which provides a range of Government 
+      <div class="card_1">
+        <div class="cards">
+          <img src="/asset/images/national.svg">
+          <h2>National top 50 consulting firms</h2>
+          <p>Corpbiz, is a professional service firm, which provides a range of Government 
            registration besides Taxation services and solutions. Roundly considered as the most 
            prestigious firm of its kind.
-        </p>
+          </p>
+        </div>
       </div>
-      <div class="card2">
-        <img src="/asset/images/client_satisfaction.svg">
-        <h2>99.9% client satisfaction</h2>
-        <p>As a professional service firm we are continually striving to improve the service we
+      <div class="card_2">
+        <div class="cards">
+          <img src="/asset/images/client_satisfaction.svg">
+          <h2>99.9% client satisfaction</h2>
+          <p>As a professional service firm we are continually striving to improve the service we
            offer to our client. We believe in building strong and long term relationship by 
            being genuinely approachable.
-        </p>
+          </p>
+        </div>
       </div>
-      <div class="card3">
-        <img src="/asset/images/client-advisory.svg">
-        <h2>Excellent Advisory Services</h2>
-        <p>We are best in rendering consultancy services in the industry through expert 
+      <div class="card_3">
+        <div class="cards">
+          <img src="/asset/images/client-advisory.svg">
+          <h2>Excellent Advisory Services</h2>
+          <p>We are best in rendering consultancy services in the industry through expert 
           professionals associated with us.
-        </p>
+          </p>
+        </div>
       </div>
     </div>
   </div>
