working on working process

--- a/subaa.html
+++ b/subaa.html
@@ -236,6 +236,29 @@
     </section>
 
 
+    <section>
+        <div class="business">
+            <h2>A business consulting company that <span>constitutes faith</span></h2>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="working-process">
+            <div class="working">
+                <h2>our working process</h2>
+                <p>Corpbiz is a technology-driven platform which provides professional services in India. We are here to provide various types of services such as incorporation of different type of entities, government registrations, legal documentation and annual compliance's.</p>
+            </div>
+            <div class="youtube">
+                <img src="./assets/images/anime.jpg" alt="">
+                <div class="icon"><i class="fa-brands fa-youtube"></i>
+                    <div class="icons"><i class="fa-solid fa-play"></i></div></div>
+            </div>
+        </div>
+        <div class="process">
+            <h2>process</h2>
+        </div>
+    </section>
 
 
 
