services block created

--- a/subaa.html
+++ b/subaa.html
@@ -254,13 +254,53 @@
                 <div class="icon"><i class="fa-brands fa-youtube"></i>
                     <div class="icons"><i class="fa-solid fa-play"></i></div></div>
                 </div>
-            </div>
-            <div class="process">
-                <h2>process</h2>
-            </div>
-        </section>
+        </div>
+        <div class="process">
+            <h2>process</h2>
+        </div>
+    </section>
 
 
+    <section>
+        <div class="services">
+            <div class="business-registration">
+                <ul>
+                    <li><p>Business registration</p></li>
+                    <li>Government registration</li>
+                    <li>fssai license</li>
+                    <li>RBI Regulatory</li>
+                    <li>environment laws</li>
+                    <li>tax filing</li>
+                    <li>IPR & NGO</li>
+                </ul>
+            </div>
+            <div class="registration">
+                <div class="cards">
+                    <div class="card">
+                        <img src="./assets/images/team-colab.svg" alt="">
+                        <h2>sole proprietorship registration</h2>
+                        <p>A sole proprietorship is a convenient and simplified way to commence a business in India. In a sol..</p>
+                        <button>get started</button>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/team-colab.svg" alt="">
+                        <h2>Partnership Firm Registration</h2>
+                        <p>Do you know that a General Partnership consists of a minimum of two people who agrees to manage a..</p>
+                        <button>get started</button>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/team-colab.svg" alt="">
+                        <h2>Indian Subsidiary Company Registration</h2>
+                        <p>If you want to get a legal status, borrow funds, bring FDI Investments, and get a perpetual succes..</p>
+                        <button>get started</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="service">
+            <h2>services</h2>
+        </div>
+    </section>
 
 
 
