--- a/kowshik.html
+++ b/kowshik.html
@@ -59,21 +59,24 @@
     <h2>Popular Services:</h2>
 
     <div class="hero-list">
-        <a href="#">Private Limited Company Registration</a>
-        <a href="#">FSSAI License</a>
-        <a href="#">GST Registration</a>
-        <a href="#">MSME Registration</a>
-        <a href="#">IEC Registration</a>
-        <a href="#">ISO Registration</a>
-        <a href="#">Trademark Registration</a>
-        <a href="#">Trademark Assignment</a>
-        <a href="#">PSARA License</a>
-        <a href="#">RERA Registration</a>
-        <a href="#">RERA Registration For Promoters</a>
-        <a href="#">Plastic Waste Processors Authorisation</a>
-        <a href="#">TSDF Facility Services</a>
-        <a href="#">Authorization for Export of E-waste</a>
-        <a href="#">EPR Post Compliance - Plastic Waste</a>
+       <ul> 
+        <li><p>Private Limited Company Registration</p></li>
+        <li><p>FSSAI License</p></li>
+        <li><p>GST Registration</p></li>
+        <li><p>MSME Registration</p></li>
+        <li><p>IEC Registration</p></li>
+        <li><p>IEC Registration</p></li>
+        <li><p>ISO Registration</p></li>
+        <li><p>Trademark Registration</p></li>
+        <li><p>Trademark Assignment</p></li>
+        <li><p>PSARA License</p></li>
+        <li><p>RERA Registration</p></li>
+        <li><p>RERA Registration For Promoters</p></li>
+        <li><p>Plastic Waste Processors Authorisation</p></li>
+        <li><p>TSDF Facility Services</p></li>
+        <li><p>Authorization for Export of E-waste</p></li>
+        <li><p>EPR Post Compliance - Plastic Waste</p></li>
+    </ul>
     </div>
 
 
