working on corpiz-legal advisory

--- a/subaa.html
+++ b/subaa.html
@@ -304,6 +304,54 @@
 
 
 
+    <section>
+        <div class="application">
+            <div class="app-forms">
+                <div class="forms">
+                    <div class="form">
+                        <img src="./assets/images/application-form.svg" alt="">
+                        <h4>fill up application form</h4>
+                    </div>
+                </div>
+                <div class="forms">
+                    <div class="form">
+                        <img src="./assets/images/online-payment.svg" alt="">
+                        <h4>make online payment</h4>
+                    </div>
+                </div>
+                <div class="forms">
+                    <div class="form">
+                        <img src="./assets/images/executive-calling.svg" alt="">
+                        <h4>executive will process application</h4>
+                    </div>
+                </div>
+                <div class="forms">
+                    <div class="form">
+                        <img src="./assets/images/registragion.svg" alt="">
+                        <h4>get confirmation on mail</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="app-corpiz">
+            <div class="corpiz">
+                <h2>Corpbiz – Legal Advisory Services</h2>
+                <p>Corpbiz is a techniology driven platform which provides legal & financial services through its team of professionals.</p>
+                <img src="./assets/images/playstore.png" alt="">
+            </div>
+            <div class="app">
+                <img src="./assets/images/corpbiz-app-removebg-preview.png" alt="">
+            </div>
+        </div>
+    </section>
+
+
+
+
 
     <script src="./styles/subaa.js"></script>
 </body>
