working on network paterns slide

--- a/subaa.html
+++ b/subaa.html
@@ -7,11 +7,15 @@
     <title>Corpbiz</title>
 
     <link rel="stylesheet" href="./styles/subaa.css">
+<link rel="stylesheet" type="text/css" href="./styles/slick.css"/>
+<link rel="stylesheet" type="text/css" href="./styles/slick-theme.css"/>
+
+    <link rel="stylesheet" href="./styles/subaa.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -351,8 +355,60 @@
 
 
 
+    <section>
+        <div class="network-paterns">
+            <div class="network">
+                <h1>our network paterns</h1>
+            </div>
+            <div class="logos">
+                <div class="logo">
+                    <img src="./assets/images/bank-of-maharastra.jpg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/justdial.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/fia.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/foodpanda.jpg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/dhfl.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/under-30.jpg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/stripe.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/spinny.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/Milton.jpg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/marg.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./assets/images/karpagam.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
+
+
+
+
+
+
+     
 
     <script src="./styles/subaa.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="./styles/slick.min.js"></script>
 </body>
 </html>
