latest news slider with media query done

--- a/subaa.html
+++ b/subaa.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./styles/subaa.css">
 <link rel="stylesheet" type="text/css" href="./styles/slick.css"/>
-<link rel="stylesheet" type="text/css" href="./styles/slick-theme.css"/>
+<!-- <link rel="stylesheet" type="text/css" href="./styles/slick-theme.css"/> -->
 
     <link rel="stylesheet" href="./styles/subaa.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -398,6 +398,88 @@
         </div>
     </section>
 
+
+    <section>
+        <div class="latest-news">
+            <div class="star-slide">
+                <div class="slide">
+                    <div class="image">
+                        <img src="./assets/images/photo-1.jpeg" alt="">
+                    </div>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="info">
+                        <p> "After a lot of research for my company incorporation I found Corpbiz. Professional staff of Corpbiz assisted me at every step for the formation of my company. "</p>
+
+                        <h6> Ms Seema Singh - CFO - Online food Delivery App</h6>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="image">
+                        <img src="./assets/images/photo2.jpeg" alt="">
+                    </div>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="info">
+                        <p>"I recommend Corpbiz, because they have a team of highly experienced professionals for providing wide range of services like taxation, valuation, financial advisory related consulting for individuals and even for those who runs a business/company. "</p>
+    
+                            <h6>Priti Singh - MD, India</h6>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="image">
+                        <img src="./assets/images/photo-3.jpg" alt="">
+                    </div>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="info">
+                        <p> "A big thank you to team corpbiz who made compliance process so easy for my company. With
+                            the very less time taken for the process, they saved me from heavy penalties."</p>
+
+                        <h6> Mr. Vinay Arora - MD, India</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="news">
+                <div class="head">
+                    <h1>latest news</h1>
+                </div>
+                <div class="slider">
+                    <div class="slide">
+                        <h2>An Overview of the Union Budget 2021-2022 (Part-A)</h2>
+                        <p>Read More...</p>
+                    </div>
+                    <div class="slide">
+                        <h2>Neo-banking platform SaveIN raises funds in extended pre-seed funding round</h2>
+                        <p>Read More...</p>
+                    </div>
+                    <div class="slide">
+                        <h2>An Overview of the Union Budget 2021-2022 (Part-B)</h2>
+                        <p>Read More...</p>
+                    </div>
+                    <div class="slide">
+                        <h2>Key Highlights of 39th GST Council Meeting</h2>
+                        <p>Read More...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
