working process created

--- a/suganya.html
+++ b/suganya.html
@@ -218,9 +218,7 @@
           </div>
         </div>
         <div class="google_play">
-          <div>
-           <p>Download our moblie app</p>
-          </div>
+          <p>Download our moblie app</p>
           <img src="/asset/images/google_play.png" />
         </div>
       </div>
@@ -271,6 +269,45 @@
       </div>
     </div>
   </div>
+
+
+  <div class="business">
+    <h2>A business consulting company that<br>
+     <span>constitutes faith.</span>
+    </h2>
+  </div>
+
+  <div class="working_process_container">
+    <div class="working_text">
+      <div class="vertical-text">
+        <h2>PROCESS</h2>
+      </div>
+      <div class="working_process">
+        <h3>Our Working Process</h3>
+        <p>Corpbiz is a technology-driven platform which provides professional services in India.
+           We are here to provide various types of services such as incorporation of different 
+           type of entities, government registrations, legal documentation and annual compliance's.
+        </p>
+      </div>
+    </div>
+    <div class="iframe">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/BxFU3uP7SIs"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+    </div>
+  </div>
+
+
+ 
+
+  
+
+
+
+
+
+
 
       <script src="./style/suganya.js"></script>
   </body>
