90% article-card completed

--- a/subaa.html
+++ b/subaa.html
@@ -484,6 +484,95 @@
 
 
 
+    <section>
+        <div class="business">
+            <h2>Visit Our <span>Articles</span></h2>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="article-card">
+            <div class="cards">
+                <div class="card">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <div class="info">
+                        <div class="header">
+                            <img src="./assets/images/photo-6.jpg" alt="">
+                            <h3>Pankaj Tyagi</h3>
+                            <h4>|</h4>
+                            <p>Date: 17 May, 2022</p>
+                        </div>
+                        <div class="content">
+                            <button>Trade</button>
+                            <h1>how to get trade licence easily in india?</h1>
+                            <p>read more...</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <div class="info">
+                        <div class="header">
+                            <img src="./assets/images/photo-6.jpg" alt="">
+                            <h3>Pankaj Tyagi</h3>
+                            <h4>|</h4>
+                            <p>Date: 17 May, 2022</p>
+                        </div>
+                        <div class="content">
+                            <button>Trade</button>
+                            <h1>how to get trade licence easily in india?</h1>
+                            <p>read more...</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <div class="info">
+                        <div class="header">
+                            <img src="./assets/images/photo-6.jpg" alt="">
+                            <h3>Pankaj Tyagi</h3>
+                            <h4>|</h4>
+                            <p>Date: 17 May, 2022</p>
+                        </div>
+                        <div class="content">
+                            <button>Trade</button>
+                            <h1>how to get trade licence easily in india?</h1>
+                            <p>read more...</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <div class="info">
+                        <div class="header">
+                            <img src="./assets/images/photo-6.jpg" alt="">
+                            <h3>Pankaj Tyagi</h3>
+                            <h4>|</h4>
+                            <p>Date: 17 May, 2022</p>
+                        </div>
+                        <div class="content">
+                            <button>Trade</button>
+                            <h1>how to get trade licence easily in india?</h1>
+                            <p>read more...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
      
