business registration box create

--- a/suganya.html
+++ b/suganya.html
@@ -279,7 +279,7 @@
 
   <div class="working_process_container">
     <div class="working_text">
-      <div class="vertical-text">
+      <div class="vertical_process">
         <h2>PROCESS</h2>
       </div>
       <div class="working_process">
@@ -298,6 +298,49 @@
     </div>
   </div>
 
+
+  <div class="service_content">
+
+    <div class="business_registration">
+        <div class="vertical_service">
+            <h1>SERVICES</h1>
+        </div>
+        <div class="service_box">
+          <a href="">Business Registration</a>
+          <a href="">Government Registration</a>
+          <a href="">Fssai License</a>
+          <a href="">RBI Regulatory</a>
+          <a href="">Environment Laws</a>
+          <a href="">Tax Filling</a>
+          <a href="">IPR & NGO</a>
+        </div>
+    </div>
+    <div class="registration_box">
+        <img src="/asset/images/team_registration.svg">
+        <h5>Limited Liability Partnership</h5>
+        <p>The word LLP holds immense significance in the corporate world and refers to Limited
+           Liability Partn..</p>
+        <button>Get Started</button>
+    </div>
+    <div class="registration_box">
+        <img src="/asset/images/team_registration.svg">
+        <h5>One Person Company Registration</h5>
+        <p>The One Person Company is a company that has only one person as a member, as stated 
+          under the sect..</p>
+        <button>Get Started</button>
+
+    </div>
+    <div class="registration_box">
+        <img src="/asset/images/team_registration.svg">
+        <h5>Sole Proprietorship Registration</h5>
+        <p>A sole proprietorship is a convenient and simplified way to commence a business in 
+          India. In a sol..</p>
+        <button>Get Started</button>
+
+    </div>
+
+</div>
+    
 
  
 
