user application create

--- a/suganya.html
+++ b/suganya.html
@@ -336,10 +336,28 @@
         <p>A sole proprietorship is a convenient and simplified way to commence a business in 
           India. In a sol..</p>
         <button>Get Started</button>
-
+      </div>
     </div>
 
-</div>
+
+    <div class="user_info">
+      <div class="user_list">
+        <img src="/asset/images/application-form.svg">
+        <p>Fill Up Application Form</p>
+      </div>
+      <div class="user_list">
+        <img src="/asset/images/online-payment.svg">
+        <p>Make Online Payment</p>
+      </div>
+      <div class="user_list">
+        <img src="/asset/images/executive-calling.svg">
+        <p>Executive will Process Application</p>
+      </div>
+      <div class="user_list">
+        <img src="/asset/images/registragion-on-main.svg">
+        <p>Get Confirmation on Mail</p>
+      </div>
+    </div>
     
 
  
